services/home-assistant/resources/voice-assistant-piper.yml
apiVersion: v1
kind: Service
metadata:
  name: piper
  labels:
    app.kubernetes.io/name: piper
spec:
  selector:
    app.kubernetes.io/name: piper
  type: NodePort
  ports:
  - name: piper
    protocol: TCP
    port: 10200
    targetPort: 10200
    nodePort: 30200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: piper
  labels: 
    app.kubernetes.io/name: piper
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: piper
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: piper
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - mediaserver
                    - nvidiaserver
      containers:
      - name: piper
        image: lscr.io/linuxserver/piper
        resources: {}
        ports:
        - containerPort: 10200
          name: piper
        volumeMounts:
        - name: piper-storage
          mountPath: /config
      volumes:
      - name: piper-storage
        persistentVolumeClaim:
          claimName: piper-storage
      restartPolicy: Always
